<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.IotActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nilai MODUS dari Data Rentang Waktu 14 hari"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@id/label_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/box2"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/unsur_hara_nitogen"
                android:src="@drawable/nitrogen"
                app:layout_constraintBottom_toTopOf="@+id/tvNitrogen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNitrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="90"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/subtext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/unsur_hara_nitogen"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNitrogen" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@id/label_activity"
            app:layout_constraintStart_toEndOf="@+id/box1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/phosphorus"
                android:contentDescription="@string/unsur_hara_fosfor"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tvPhosporous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="60"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/subtext2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/unsur_hara_fosfor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhosporous" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@+id/box1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/box4"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/potassium"
                android:contentDescription="@string/unsur_hara_kalium"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tvPotassium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="70"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/subtext3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/unsur_hara_kalium"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPotassium" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@+id/box2"
            app:layout_constraintStart_toEndOf="@+id/box3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/temperature"
                android:contentDescription="@string/temperature_suhu"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="24"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image4" />

            <TextView
                android:id="@+id/subtext4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/temperature_suhu"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTemperature" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="°C"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTemperature"
                app:layout_constraintStart_toEndOf="@+id/tvTemperature"
                app:layout_constraintTop_toTopOf="@+id/tvTemperature" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@+id/box3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/box6"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/humidity"
                android:contentDescription="@string/humidity_kelembaban"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="60"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image5" />

            <TextView
                android:id="@+id/subtext5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/humidity_kelembaban"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHumidity" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHumidity"
                app:layout_constraintStart_toEndOf="@+id/tvHumidity"
                app:layout_constraintTop_toTopOf="@+id/tvHumidity" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@+id/box4"
            app:layout_constraintStart_toEndOf="@+id/box5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ph"
                android:contentDescription="@string/ph_tanah"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tvPH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="7"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/subtext6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ph_tanah"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPH" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/box_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box5">

            <ImageView
                android:id="@+id/image7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/rainfall_curah_hujan"
                android:src="@drawable/rain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRainfall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="100"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image7" />

            <TextView
                android:id="@+id/subtext7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/rainfall_curah_hujan"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRainfall" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="mm"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvRainfall"
                app:layout_constraintStart_toEndOf="@+id/tvRainfall"
                app:layout_constraintTop_toBottomOf="@+id/image7"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnRekomendasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="Input Data"
            android:background="@drawable/rounded_bg_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/box7"
            app:layout_constraintStart_toStartOf="@+id/box7"
            app:layout_constraintTop_toBottomOf="@+id/box7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
